--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
+        distribution: 'adopt'
         java-version: 11
 
     - name: Install Liquibase
