--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,8 +42,10 @@ jobs:
 
     - name: Install Liquibase
       run: |
+        bin/fetch.sh
         #wget https://github.com/liquibase/liquibase/releases/download/liquibase-parent-4.5.0/liquibase-4.5.0.tar.gz
-        wget https://github.com/liquibase/liquibase/archive/refs/tags/v4.22.0.tar.gz
-        tar xf v4.22.0.tar.gz
-        rm v4.22.0.tar.gz
+        #wget https://github.com/liquibase/liquibase/archive/refs/tags/v4.22.0.tar.gz
+        #tar xf v4.22.0.tar.gz
+        #rm v4.22.0.tar.gz
         pwd
+        liquibase -version
