--- a/resource/liquibase.properties
+++ b/resource/liquibase.properties
@@ -1,5 +1,8 @@
-driver: net.snowflake.client.jdbc.SnowflakeDriver
-url: jdbc:snowflake://snowdata.snowflakecomputing.com/
-classpath: lib/snowflake-jdbc-3.13.5.jar:lib/liquibase-snowflake-4.4.0.jar
-driverPropertiesFile: resource/snowflake.properties
+driver: org.postgresql.Driver
+url: ${{ env.JDBC_URL }}
+classpath: lib/postgresql.jar:lib/liquibase-snowflake-4.4.0.jar
+username: ${{ env.DB_USERNAME }}
+password: ${{ env.DB_PASSWORD }}
+liquibaseSchemaName=public
+driverPropertiesFile: resource/db.properties
 liquibase.hub.mode=off
