--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -51,13 +51,16 @@ jobs:
       run: |
         chmod +x bin/call_lbp.sh
         sed -i -e 's/\r$//' bin/call_lbp.sh
-        cat ./bin/call_lbp.sh
+        
+        chmod +x ./bin/populate_liquibase_properties.sh
+        sed -i -e 's/\r$//' ./bin/populate_liquibase_properties.sh
+        
         ./bin/call_lbp.sh
-        cat ./bin/exec_lbp.sh
         
         chmod +x ./bin/exec_lbp.sh
         sed -i -e 's/\r$//' ./bin/exec_lbp.sh
         ./bin/exec_lbp.sh
+        
       shell: bash
       
       
