--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -55,27 +55,15 @@ jobs:
     - name: Install AWS SDK
       run: pip install boto3
       
-    - name: Get AWS Secret
+    - name: Populate liquibase properties
       run: |
         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }}
         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }}
         export AWS_DEFAULT_REGION=${{ secrets.AWS_REGION }}
-        python - <<EOF
-        import boto3
-        import json
-        client = boto3.client('secretsmanager')
-        response = client.get_secret_value(SecretId='dev/aurora-pg/pg1/postgres')
-        secret_value = response['SecretString']
-        secrets = json.loads(secret_value)
-        print(secrets['host'])
-        print(secrets['username'])
-        print(secrets['password'])
-        EOF
-
-
-
-    - name: Populate liquibase properties
-      run: |
+        
+        chmod +x bin/get_secrets.py
+        python bin/get_secrets.py --arg1 'dev/aurora-pg/pg1/postgres'
+        
         chmod +x bin/call_lbp.sh
         sed -i -e 's/\r$//' bin/call_lbp.sh
         
