--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -79,5 +79,6 @@ jobs:
       run: |
         chmod +x ./bin/run_liquibase.sh
         sed -i -e 's/\r$//' ./bin/run_liquibase.sh
+        ./bin/run_liquibase.sh
       shell: bash  
       
