--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,9 @@ env:
   RDS_HOST: "dev/aurora-pg/pg1/postgres:host"
  
 phases:
-  Install:
-	  runtime-versions:
-	    java: corretto11
-	    python: 3.8
-	    liquibase: 4.21.1
+  install:
+    runtime-versions:
+      java: corretto11
   pre_build:
     commands:
       - echo $RDS_HOST:latest
