--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,7 @@
 version: 0.2
 
 env:
+  LB_VERSION=$(cat LIQUIBASE_VERSION)
   #secrets-manager:
   RDS_HOST: "dev/aurora-pg/pg1/postgres:host"
  
@@ -8,6 +9,12 @@ phases:
   install:
     runtime-versions:
       java: corretto17
+    commands:
+      - echo "Installing Liquibase..."
+      - chmod +x bin/fetch.sh
+      - ./bin/fetch.sh
+      - export PATH=$PATH:$PWD/liquibase
+      - chmod +x liquibase
   pre_build:
     commands:
       - echo $RDS_HOST:latest
