--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,6 @@
 version: 0.2
 
 env:
-  LB_VERSION: $(cat LIQUIBASE_VERSION)
   #secrets-manager:
   RDS_HOST: "dev/aurora-pg/pg1/postgres:host"
  
@@ -10,9 +9,10 @@ phases:
     runtime-versions:
       java: corretto17
     commands:
+      - LB_VERSION=$(cat LIQUIBASE_VERSION)
       - echo "Installing Liquibase...$LB_VERSION"
-      - chmod +x $CODEBUILD_SRC_DIR/bin/fetch.sh
-      - .$CODEBUILD_SRC_DIR/bin/fetch.sh
+      - chmod +x ./bin/fetch.sh
+      - ./bin/fetch.sh
       - export PATH=$PATH:$PWD/liquibase
       - chmod +x liquibase
   pre_build:
